# Ocean-Wave-Simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/models/: wooden_sphere.fbx
res/shaders/: basic_shader.frag  basic_shader.vert  skybox_shader.frag  skybox_shader.vert  transforms.glsl
scripts/: build_and_run_debug.bat  build_and_run_release.bat  build_debug.bat  build_release.bat  run_debug.bat
src/: CMakeLists.txt  main.cpp  meshes.h
src/assets/: asset_list.h
src/assets/private/: _assimp_mesh_importer.cpp
src/imgui/: imgui_handler.cpp  imgui_handler.h
src/renderer/: camera.h  renderer.cpp  scene_renderer.cpp  scene_renderer.h
src/renderer/data/: cubemap.cpp  cubemap.h  material.h  shader.h
src/renderer/light/: point_light.h
src/scene/: scene.cpp
